--- a/src/components/css/common.css
+++ b/src/components/css/common.css
@@ -42,10 +42,17 @@
 .header {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 100px;
+  height: auto;
   background-color: white;
   color: coral;
   margin-top: 0px;
   padding: 5px;
+  text-align: center;
+}
+
+.headerLink {
+  font-size: smaller;
+  margin-bottom: 10px;
 }
