--- a/src/components/css/common.css
+++ b/src/components/css/common.css
@@ -56,3 +56,9 @@
   font-size: smaller;
   margin-bottom: 10px;
 }
+
+.main-skeleton {
+  margin-top: 40px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
