--- a/src/components/css/common.css
+++ b/src/components/css/common.css
@@ -6,6 +6,14 @@
   width: 300px;
 }
 
+.box2 {
+  background-color: chocolate;
+  padding: 15px;
+  border-radius: 10px;
+  margin-top: 25px;
+  width: 310px;
+}
+
 .box-inside {
   display: flex;
   justify-content: space-evenly;
